# dg-dataset-profiler

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.ray  README.md  datagems-croissant-extension.ttl  docker-compose-dev.yml  mkdocs.yml  pyproject.toml
.github/workflows/: code-metrics-on-demand.yml  code-scan-on-demand.yml  docker-publish.yml  vulnerability-scan-on-demand.yml
common_llm/: __init__.py  connector.py
dataset_profiler/: dataset_restructurer.py  dataset_specification.py  main.py  profile_models.py  utilities.py
dataset_profiler/common_llm/: SCAYLE_README.md  __init__.py  config_handler.py  connector.py  example_scayle_with_config.py  scayle_auth.py  scayle_connection_test.py
dataset_profiler/configs/: config_dev.yml  config_logging.py  config_prod.yml  config_reader.py
dataset_profiler/data_quality/: __init__.py  data_profile.py  detector.py  executor.py  llm.py  models.py  prompts.py
dataset_profiler/job_manager/: job_storing.py  profile_job.py  ray_client.py
dataset_profiler/profile_components/: constants.py  cta.py  dateset_top_level.py  distribution.py
dataset_profiler/routes/: add_routes.py  auth.py  health.py  profiler.py
dataset_profiler/schemas/: specification.py
docs/: index.md  mkdocs.yml  modules.md
docs/docs/: api-overview.md  architecture.md  configuration.md  data-quality.md  deployment.md  error-codes.md  faq.md  index.md  license.md  logging.md  maintenance.md  profile-examples-cdd.md  profile-examples-moma.md  security.md
integration_tests/: README.md  client.py  config.py  conftest.py  test_profiling.py
scripts/: sync_cdd_profile_paths.py
storage/: README.MD  base_manager.py  s3_manager.py
tests/: dummy_data_cdd.py  era5land.py  export_mathe_pdf_keywords.py  isco_taxonomy.py  playground_britannica_text.py  playground_pdf.py  test_19th_century_project.py  test_biotime_emissions.py  test_britannica_text.py  test_cedefop_skill_forecast.py  test_common_llm_connector.py  test_data_quality.py  test_diderot.py  test_dummy_data.py  test_encyc_net.py  test_era5land.py  test_esco.py  test_foo.py  test_global_emissions.py  test_isco_taxonomy.py  test_last_mile.py  test_mathe.py  test_mathe_assessment.py  test_mathe_db.py  test_mathe_integration_techniques.py  test_mathe_material.py  test_mathe_pdf.py  test_s3_manager.py  test_single_pdf.py  test_single_txt.py  test_subway_data.py  test_weather_stations.py  test_weather_stations_climpact.py  test_wikipedia.py  test_zoo_2024.py  weather_stations_stream.py
v0.0.1/: 404.html  index.html  sitemap.xml
v0.0.1/api-overview/: index.html
v0.0.1/architecture/: index.html
v0.0.1/configuration/: index.html
v0.0.1/deployment/: index.html
v0.0.1/error-codes/: index.html
v0.0.1/faq/: index.html
v0.0.1/license/: index.html
v0.0.1/logging/: index.html
v0.0.1/maintenance/: index.html
v0.0.1/openapi/: index.html
v0.0.1/profile-examples-cdd/: index.html
v0.0.1/profile-examples-moma/: index.html
v0.0.1/search/: search_index.json
v0.0.1/security/: index.html
v0.0.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.2/api-overview/: index.html
v0.0.2/architecture/: index.html
v0.0.2/configuration/: index.html
v0.0.2/deployment/: index.html
v0.0.2/error-codes/: index.html
v0.0.2/faq/: index.html
v0.0.2/license/: index.html
v0.0.2/logging/: index.html
v0.0.2/maintenance/: index.html
v0.0.2/openapi/: index.html
v0.0.2/profile-examples-cdd/: index.html
v0.0.2/profile-examples-moma/: index.html
v0.0.2/search/: search_index.json
v0.0.2/security/: index.html
v0.0.3/: 404.html  index.html  sitemap.xml
v0.0.3/api-overview/: index.html
v0.0.3/architecture/: index.html
v0.0.3/configuration/: index.html
v0.0.3/content/: openapi.json
v0.0.3/deployment/: index.html
v0.0.3/error-codes/: index.html
v0.0.3/faq/: index.html
v0.0.3/license/: index.html
v0.0.3/logging/: index.html
v0.0.3/maintenance/: index.html
v0.0.3/openapi/: index.html
v0.0.3/profile-examples-cdd/: index.html
v0.0.3/profile-examples-moma/: index.html
v0.0.3/search/: search_index.json
v0.0.3/security/: index.html
v0.0.4/: 404.html  index.html  sitemap.xml
v0.0.4/api-overview/: index.html
v0.0.4/architecture/: index.html
v0.0.4/configuration/: index.html
v0.0.4/deployment/: index.html
v0.0.4/error-codes/: index.html
v0.0.4/faq/: index.html
v0.0.4/license/: index.html
v0.0.4/logging/: index.html
v0.0.4/maintenance/: index.html
(+41 files in other folders)
