[project]
name = "dataset_profiler"
version = "0.0.1"
description = "Repository of the dataset-profiler DataGEMS service"
authors = [{ name = "DataGEMS", email = "mxydas@athenarc.gr" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.40",
    "nltk>=3.9.1",
    "chardet>=5.2.0",
    "langdetect>=1.0.9",
    "pydantic>=2.11.4",
    "langchain>=0.3.25, <0.4.0",
    "langchain_ollama>=0.3.2, <0.4.0",
    "langchain_core>=0.3.59, <0.4.0",
    "langsmith>=0.3.42, <0.4.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.6.0",
    "docling>=2.33.0",
    "ollama>=0.5.1",
    "pikepdf>=9.8.1",
    "fastapi[standard]>=0.115.14",
    "ray[client]>=2.50.0",
    "redis>=6.4.0",
    "psycopg2-binary>=2.9.11",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "mkdocs>=1.6.1",
    "mike>=2.1.3",
    "neoteroi-mkdocs>=1.1.3",
    "pymdown-extensions>=10.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
py-modules = ["dataset_profiler"]

[tool.hatch.build.targets.wheel]
packages = ["dataset_profiler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
